--- a/Tato-Do/docker-compose.yml
+++ b/Tato-Do/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     volumes:
       - ./config:/opt/app/config
       - ./src:/opt/app/src
-      - ./package.json:/opt/package.json
-      - ./yarn.lock:/opt/yarn.lock
-      - ./.env:/opt/app/.env
+      #- ./package.json:/opt/package.json
+      #- ./yarn.lock:/opt/yarn.lock
+      #- ./.env:/opt/app/.env
       - ./public/uploads:/opt/app/public/uploads
     ports:
       - "1337:1337"
