Update Dockerfile to build before starting app
Added build step before starting the application.

--- a/Tato-Do/Dockerfile
+++ b/Tato-Do/Dockerfile
@@ -13,8 +13,9 @@ ENV PATH=/opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
 COPY . .
+RUN npm run build
 RUN chown -R node:node /opt/app
 USER node
 #RUN ["npm", "run", "build"]
 EXPOSE 1337
-CMD ["npm", "run", "develop"]
+CMD ["npm", "run", "start"]
