--- a/Tato-Do/Dockerfile
+++ b/Tato-Do/Dockerfile
@@ -13,9 +13,7 @@ ENV PATH=/opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
 COPY . .
-RUN npm run build
 RUN chown -R node:node /opt/app
 USER node
-#RUN ["npm", "run", "build"]
 EXPOSE 1337
-CMD ["npm", "run", "start"]
+CMD ["sh", "-c", "npm run build && npm run start"]
