--- a/Tato-Do/Dockerfile
+++ b/Tato-Do/Dockerfile
@@ -1,19 +1,22 @@
-FROM node:22-alpine
+FROM node:18-alpine
+
 # Installing libvips-dev for sharp Compatibility
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
-ARG NODE_ENV=production
+
+ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /opt/
 COPY package.json package-lock.json ./
 RUN npm install -g node-gyp
 RUN npm config set fetch-retry-maxtimeout 600000 -g && npm install
-RUN npm rebuild esbuild
+
 ENV PATH=/opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
 COPY . .
 RUN chown -R node:node /opt/app
 USER node
+
 EXPOSE 1337
-CMD ["sh", "-c", "npm run build && npm run start"]
+CMD ["npm", "run", "develop"]
