--- a/Tato-Do/docker-compose.yml
+++ b/Tato-Do/docker-compose.yml
@@ -1,4 +1,4 @@
-services:
+#services:
   strapi:
     container_name: strapi
     build: .
@@ -18,11 +18,13 @@ services:
       NODE_ENV: development
     volumes:
       #- ./config:/opt/app/config
-      - ./src:/opt/app/src
+      #- ./src:/opt/app/src
       #- ./package.json:/opt/package.json
       #- ./yarn.lock:/opt/yarn.lock
       #- ./.env:/opt/app/.env
-      - ./public/uploads:/opt/app/public/uploads
+      #- ./public/uploads:/opt/app/public/uploads
+      - strapi-src:/opt/app/src              # ✅ Persiste les content-types
+      - strapi-uploads:/opt/app/public/uploads
     ports:
       - "1337:1337"
     networks:
