--- a/Tato-Do/docker-compose.yml
+++ b/Tato-Do/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   TatoDoDB:
     container_name: strapiDB
-    platform: linux/amd64 #for platform error on Apple M1 chips
+    platform: linux/amd64
     restart: unless-stopped
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
